# legendary-todo-list

./: .gitignore  README.md  main.py  pyproject.toml
app/: crud.py  crud_route.py  database.py  main.py  models.py  schemas.py
static/: index.html
